# Health-API

./: README.md
.github/workflows/: ci.yml
app/: .env  backend_test.db  main.py  manage.py  pyproject.toml  settings.py
app/controllers/: auth.py  financial.py  user.py
app/models/: __init__.py  database.py
app/routers/: __init__.py  financial.py  user.py
app/schemas/: __init__.py  financial.py  users.py
app/tests/: conftest.py  db_test.db
app/tests/integration/: test_financial.py  test_user.py
app/tests/unity/: test_user.py
app/utils/: logging.py
